fixed iframe scrolloing issue. fixed clipPath issue with safari by commenting it out

--- a/css/app.css
+++ b/css/app.css
@@ -45,7 +45,7 @@ body {
                 #grid td div.widget.show .edit-view {  display: none;  }
                 #grid td div.widget.show .show-view {  display: block;  }
         #grid td div.html-widget { background: rgba(57, 73, 84, 0.7) url("../images/html.svg") no-repeat; }
-            #grid td div.html-widget iframe { border: none; }
+            #grid td div.html-widget iframe { border: none; overflow: hidden; }
         #grid td div.popup {
             display: none;
             top: 1em;
